# upsSp

./: README.md  game_prepared.txt  herni_plochy.txt
client/: build.gradle  pom.xml
client/src/main/demo/: build.gradle
client/src/main/demo/src/main/java/: module-info.java
client/src/main/java/vondrovic/ups/sp/client/: AlertFactory.java  App.java  I18Support.java  Main.java  Receiver.java  SceneEnum.java
client/src/main/java/vondrovic/ups/sp/client/controller/: AbstractController.java  ConnectionController.java  GameController.java  LobbyController.java  MainMenuController.java  ResultController.java  RoomController.java
client/src/main/java/vondrovic/ups/sp/client/model/: Board.java  GameModel.java  GameStatus.java  Player.java  Position.java  Receiver.java  Ship.java  ShipType.java  Square.java  SquareStatus.java
client/src/main/resources/: connection.fxml  game.fxml  mainMenu.fxml  result.fxml
client/src/main/resources/lang/: messages.properties  messages_cs_CZ.properties
doc/: document.aux  document.out  document.tex  protokol_zprav.docx  ~$otokol_zprav.docx
doc/images/: FAV_cmyk.eps
server/: CMakeLists.txt  arraylist.c  arraylist.h  client.c  client.h  commands.c  commands.h  errors.h  hashmap.c  hashmap.h  main.c  main.h  player.h  server.c  server.h  ship.h  shipGame.c  shipsGame.c  shipsGame.h
server/communication/: client.c  client.h  commands.c  commands.h  errors.h  server.c  server.h
server/game/: ship.c  ship.h  shipsGame.c  shipsGame.h
server/structures/: arraylist.c  hashmap.c  hashmap.h
(+17 files in other folders)
